--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 
 <head>
     <title>Final Project</title>
+    <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/styles/main.sass.css">
     <script type="text/javascript" src="//api.filepicker.io/v2/filepicker.js"></script>
-
-
 </head>
 
 <body>
-<input type="filepicker" data-fp-apikey="AttpdoWEyRR2zL1yUKA3Zz"
-onchange="alert(event.fpfile.url)">
-	<script type="text/javascript" src="scripts/bundle.js"></script>
+    <nav id="nav"></nav>
+    <main id="app"></main>
+    <input type="filepicker" data-fp-apikey="AttpdoWEyRR2zL1yUKA3Zz" onchange="alert(event.fpfile.url)">
+    <script src="//www.parsecdn.com/js/parse-1.6.4.min.js"></script>
+    <script type="text/javascript" src="scripts/bundle.js"></script>
+    <script type="text/javascript" src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
